Fix greeting positioning to be aligned center

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
     display: grid;
     place-items: center;
     align-content: center;
-    margin-left: -100px;
 }
 
 .hidden-translate {
